--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net48" />
+  <package id="itext7" version="7.1.7" targetFramework="net48" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net48" />
 </packages>
