--- a/packages.config
+++ b/packages.config
@@ -3,8 +3,13 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net48" />
+  <package id="Ical.Net" version="4.1.11" targetFramework="net48" />
   <package id="itext7" version="7.1.7" targetFramework="net48" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net48" />
+  <package id="NodaTime" version="2.0.2" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net48" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net48" />
+  <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net48" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
 </packages>
