--- a/packages.config
+++ b/packages.config
@@ -6,6 +6,8 @@
   <package id="Ical.Net" version="4.1.11" targetFramework="net48" />
   <package id="itext7" version="7.1.7" targetFramework="net48" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net48" />
+  <package id="MahApps.Metro.IconPacks" version="2.3.0" targetFramework="net48" />
+  <package id="MahApps.Metro.IconPacks.Material" version="2.3.0" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net48" />
   <package id="NodaTime" version="2.0.2" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net48" />
