--- a/App.config
+++ b/App.config
@@ -11,7 +11,13 @@
     <userSettings>
         <NESPTI.Properties.Settings>
             <setting name="sourcePath" serializeAs="String">
-                <value>C:\</value>
+                <value>C:\NESPTI</value>
+            </setting>
+            <setting name="outputPath" serializeAs="String">
+                <value>C:\NESPTI</value>
+            </setting>
+            <setting name="inputPath" serializeAs="String">
+                <value>C:\NESPTI</value>
             </setting>
         </NESPTI.Properties.Settings>
     </userSettings>
