New Starting point. Todo: 1. Logs, 2. Calendar updates, 3. Installer package.

--- a/NESPTI.csproj
+++ b/NESPTI.csproj
@@ -174,8 +174,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <None Include="Resources\Icon1.ico" />
+    <Resource Include="Resources\Icon1.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
