--- a/packages.config
+++ b/packages.config
@@ -11,6 +11,9 @@
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net48" />
   <package id="NodaTime" version="2.0.2" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.1.3" targetFramework="net48" />
+  <package id="Serilog" version="2.8.0" targetFramework="net48" />
+  <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net48" />
+  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net48" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net48" />
   <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net48" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
