--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net48" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net48" />
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net48" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="Ical.Net" version="4.1.11" targetFramework="net48" />
   <package id="itext7" version="7.1.7" targetFramework="net48" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net48" />
@@ -14,6 +15,10 @@
   <package id="Serilog" version="2.8.0" targetFramework="net48" />
   <package id="Serilog.Sinks.Console" version="3.1.1" targetFramework="net48" />
   <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net48" />
+  <package id="System.Data.SQLite" version="1.0.111.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Linq" version="1.0.111.0" targetFramework="net48" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net48" />
   <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net48" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net48" />
